Update Network Sentinel to version 1.0.4 with enhanced network monitoring features. Added jitter calculation and DNS testing capabilities, improved bandwidth statistics, and refined UI elements for better user experience. Adjusted ping interval settings and updated author information in package.json.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "network-sentinel",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "Network monitoring and game server pinging plugin for Steam Deck",
   "type": "module",
   "scripts": {
@@ -13,14 +13,14 @@
     "url": "git+https://github.com/KrishGaur1354/network-sentinel.git"
   },
   "keywords": [
-    "decky",
-    "plugin",
+    "ping test",
+    "wifi radar",
     "network",
     "monitoring",
-    "steam-deck",
+    "DNS test",
     "deck"
   ],
-  "author": "Krish Gaur",
+  "author": "ThatOneKrish",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/KrishGaur1354/network-sentinel/issues"
